solved alignment bug

--- a/style.css
+++ b/style.css
@@ -261,10 +261,17 @@ body {
     /* Flex properties */
     flex-direction: row;
     align-items: center;
-    gap: 2em;
 
     min-width: unset;
     max-width: 1000px;
+  }
+
+  .inside-container {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    gap: 2em;
+    width: 100%;
   }
 
   .side-one {
@@ -274,7 +281,6 @@ body {
   .side-two {
     /* Flex properties */
     flex: 1.5;
-    align-self: center;
 
     padding: 3em 2em 4.5em;
   }
